force-app/main/default/objects/FolderFileLink__c/FolderFileLink__c.object-meta.xml
<CustomObject>
    <label>FolderFileLink</label>
    <nameField>
        <displayFormat>FFL-{0000}</displayFormat>
        <label>FolderFileLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FolderFileLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>