force-app/main/default/objects/FolderFileLink__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FolderFileLinks</relationshipLabel>
    <relationshipName>FolderFileLinks</relationshipName>
    <type>Lookup</type>
</CustomField>