force-app/main/default/objects/FolderFileLink__c/fields/FileLabel__c.field-meta.xml
<CustomField>
    <fullName>FileLabel__c</fullName>
    <label>FileLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>