force-app/main/default/objects/FolderFileLink__c/fields/UploadDate__c.field-meta.xml
<CustomField>
    <fullName>UploadDate__c</fullName>
    <label>UploadDate</label>
    <type>Date</type>
</CustomField>